Page routing update for login

--- a/docs/Change Requests/CR-012-2025-12-08.md
+++ b/docs/Change Requests/CR-012-2025-12-08.md
@@ -90,5 +90,16 @@ The mantine rich text editor has a 'subtle' setting which simplifies the menu op
 
 Create Change Request Export button. I would like to select the content for this in one of 2 ways: First: the bulk selection check boxes. If there are selected fields, Second: The filter that has been applied. In issue manager there are filters at the top of the table of issues. I want to apply those filters to the export content of 'Create Change Request' Export. Currently the export is of all pending items. This is limiting for me because I want to work ond development features, fixes and development: Ideas dont flow as a logical development batch and so by filtering by my tags, I can batch CR's together into a CR document, and flag the issues as in progress.
 
----
+Create Change Request Export button.
+
+I would like to select the content for this in one of 2 ways:
+
+First: the bulk selection check boxes.
+
+If there are selected fields, 
+Second: The filter that has been applied.
+
+In issue manager there are filters at the top of the table of issues. I want to apply those filters to the export content of 'Create Change Request' Export. Currently the export is of all pending items. This is limiting for me because I want to work ond development features, fixes and development: Ideas dont flow as a logical development batch and so by filtering by my tags, I can batch CR's together into a CR document, and flag the issues as in progress. ---
+
+❌ This is not working. I want to be able to create exports for purposes other than briefing the AI. There are a number of filers that filter the view of the data on screen - I need the output .md file to obey the on screen filter rules please - both for Export and for Create CR.
 
